'pending approval' page, styling tweaks

--- a/vue/src/styles/_ui.sass
+++ b/vue/src/styles/_ui.sass
@@ -83,3 +83,14 @@ button
     position: absolute
     content: "\e5d3"
     font-family: "Material Symbols Outlined"
+
+.msg_error
+  display: inline-block
+  font-size: .8em
+  color: red
+  padding: 6px 10px
+  background-color: #ffeeee
+  border: 1px solid #f4abab
+  border-radius: 6px
+  width: auto
+  transition: all .2
