--- a/vue/src/styles/_variables.sass
+++ b/vue/src/styles/_variables.sass
@@ -6,7 +6,7 @@ $body-font: Nunito, Avenir, Nunito, sans-serif
 $body-font-size: 13px
 $body-font-weight: 400
 
-// COLORS
+// UI COLORS
 
 $primary: $cyan-400-color
 $red: rgb(253, 67, 67)
@@ -22,6 +22,10 @@ $lightest: #aaa
 $label-color: #666
 $button-color: $dark
 $input-border-color: #ccc
+
+// ACCENT COLORS
+$dark-blue-grey: #22485B
+$bright-aqua: #00FFFF
 
 // UI ITEMS
 
