--- a/vue/src/styles/styles.sass
+++ b/vue/src/styles/styles.sass
@@ -44,6 +44,275 @@ h1, h2, h3, h4, h5, h6
 .lighter
   color: $lighter
 
+.pagination
+  display: flex
+  gap: 6px
+  div
+    cursor: pointer
+    display: flex
+    justify-content: center
+    align-items: center
+    min-width: 30px
+    min-height: 30px
+    border-radius: 6px
+    background: #eee
+    color: #aaa
+    &.active
+      background: $primary
+      color: white
+
+.donut
+  width: 40px
+  height: 40px
+  display: flex
+  justify-content: center
+  align-items: center
+  font-size: 11px
+  color: #999
+  .chart
+    width: 40px
+    height: 40px
+    position: absolute
+h1
+  color: #666
+.main
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: flex-start
+  background-color: #f1f1f1
+  min-height: 100vh
+  padding: 120px 20px 60px 20px
+  top: 80px
+section
+  display: flex
+  flex-direction: column
+  gap: 0px
+.container
+  width: 900px
+  max-width: 100%
+  display: flex
+  flex-direction: column
+  gap: 20px
+
+  .ph_pills
+    height: 20px
+    display: flex
+    flex-direction: row
+    // justify-content: center
+    align-items: center
+    gap: 6px
+    .ph_pill
+      flex: 0
+      justify-content: center
+      align-items: center
+      padding: 2px 8px
+      background-color: rgba(255,255,255,.3)
+      color: rgba(0,0,0,.3)
+      width: auto
+      height: auto
+      border-radius: 20px
+      &.active
+        background-color: rgba(255,255,255,1)
+        color: #546E7A
+
+  .table-titlebar
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+
+    button
+      background-color: #00C6C6
+      border-radius: 25px
+      color: white
+      border: 0
+
+  // .ph_boxes
+  //     display: flex
+  //     flex-direction: row
+  //     gap: 16px
+  //     div
+  //       flex:1
+  //       background-color: white
+  //       // width: 100px
+  //       height: 100px
+  //       border-radius: 10px
+  .stats
+    display: flex
+    flex-direction: row
+    gap: 20px
+    .card
+      flex: 1
+      display: flex
+      flex-direction: column
+      justify-content: space-between
+      background-color: white
+      padding: 16px
+      // width: 100px
+      min-height: 120px
+      border-radius: 10px
+
+      &-top
+        display: flex
+        flex-direction: column
+        gap: 4px
+
+      &-bottom
+        color: #aaa
+
+      .rating
+        display: flex
+        align-items: center
+        font-size: 20px
+        color: #666
+        gap: 6px
+        .stars
+          display: flex
+          align-items: center
+          color: #00C6C6
+          span
+            width: 20px
+            heith: 20px
+    &-title
+      font-size: 1.2em
+      color: #aaa
+
+    &-deals-won,
+    &-deal-size
+      padding: 0
+      justify-content: flex-start !important
+      gap: 16px
+      &-number
+        font-size: 1.8em
+        color: #666
+
+  .cards_lg
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    gap: 16px
+  .card_lg
+    display: flex
+    flex-direction: column
+    flex: 1
+    gap: 16px
+    min-height: 200px
+    border-radius: 10px
+    padding: 20px
+    // color: white
+    background: white
+
+    &.green
+      background-color: #00C6C6
+    &.blue
+      background-color: #019CCD
+    &-content
+      flex: 1
+      display: flex
+      flex-direction: row
+      justify-content: space-between
+      align-items: center
+      font-size: 1.2em
+      .large
+        font-size: 1.8em
+  .ph_header
+    display: flex
+    background-color: #ccc
+    height: 40px
+    width: 100%
+    border-radius: 10px
+
+  .ph_table
+    display: flex
+    background-color: #eee
+    height: 400px
+    width: 100%
+    border-radius: 10px
+
+.ph_boxes
+  display: flex
+  flex-direction: row
+  gap: 6px
+  .ph_box
+    background-color: #eee
+    width: 100px
+    height: 30px
+    border-radius: 20px
+.checkbox-group
+  flex-direction: row
+  flex-wrap: wrap
+  width: 400px
+  label
+    width: 160px
+pre
+  color: black
+
+.table
+  display: flex
+  flex-direction: column
+  gap: 20px
+  color: #666
+  &-rows
+    background-color: white
+    border-radius: 10px
+  &-row
+    // flex: 1
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 10px
+    border-radius: 10px
+
+  &-header
+    background-color: #546E7A
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    padding: 10px
+    border-radius: 10px
+    color: rgba(255,255,255,0.7)
+
+  &-header,
+  &-row
+    &-check
+      width: 50px
+      display: flex
+    &-sm
+      width: 100px
+    &-med
+      width: 150px
+    &-lg
+      flex: 1
+  .last
+    display: flex
+    justify-content: flex-end
+    color: #00BB8E
+  .access_icons
+    display: flex
+    gap: 6px
+    span
+      font-size: 1.5em
+      opacity: .1
+      color: #00C6C6
+      span.active
+        opacity: 1
+
+.banner_lg
+  background: $dark-blue-grey
+  color: white
+  gap: 6px
+  padding: 30px
+  align-items: flex-start
+  border-radius: 10px
+  h1
+    margin: 0
+    color: $bright-aqua
+  button
+    color: $dark
+    background: $bright-aqua
+    border-radius: 20px
+
 @media only screen and (max-width: 767px)
   .main
     margin-left: 0px
