Major filters overhaul
Filters are generated dynamically, i18n added.

--- a/vue/src/styles/_forms.sass
+++ b/vue/src/styles/_forms.sass
@@ -76,6 +76,10 @@ label
 
 // PLUGINS
 
+.vue-tel-input
+  input
+    border: 0 !important
+    
 // vueform multiselect
 :root
   --ms-tag-bg: #2c3e50
