--- a/vue/src/styles/_variables.sass
+++ b/vue/src/styles/_variables.sass
@@ -22,6 +22,8 @@ $lightest: #aaa
 $label-color: #666
 $button-color: $dark
 $input-border-color: #ccc
+$white: #fff
+$gray: #aaa
 
 // ACCENT COLORS
 $dark-blue-grey: #22485B
