--- a/vue/src/styles/_variables.sass
+++ b/vue/src/styles/_variables.sass
@@ -21,7 +21,8 @@ $lighter: #999
 $lightest: #aaa
 $label-color: #666
 $button-color: $dark
-$input-border-color: #ccc
+$input-border: #eee 1px solid
+$input-background: #f5f5f5
 $white: #fff
 $gray: #aaa
 
