--- a/vue/src/styles/_checkbox.sass
+++ b/vue/src/styles/_checkbox.sass
@@ -25,6 +25,8 @@
   &.nolabel
     width: 20px
     height: 20px
+    flex-grow: 0 
+    padding: 0
 
   /* Hide the browser's default check-box button */
   & input
