campaigns in progress

--- a/vue/src/styles/_variables.sass
+++ b/vue/src/styles/_variables.sass
@@ -11,7 +11,7 @@ $body-font-weight: 400
 $primary: $cyan-400-color
 $red: rgb(253, 67, 67)
 $link: #0088ff
-$dark: #2c3e50
+$dark: #2c3e50  
 $darker: #151e27
 $icon-dark: #637b92
 $icon-light: #c6d2de
@@ -29,6 +29,7 @@ $gray: #aaa
 // ACCENT COLORS
 $dark-blue-grey: #22485B
 $bright-aqua: #00FFFF
+$green: #00C6C6
 
 // UI ITEMS
 
