--- a/vue/src/styles/styles.sass
+++ b/vue/src/styles/styles.sass
@@ -340,6 +340,13 @@ pre
 
 .bold
   font-weight: bold  
+
+.link
+  color: $link
+  cursor: pointer
+  text-decoration: none
+  &:hover
+    text-decoration: underline  
 @media only screen and (max-width: 767px)
   .main
     margin-left: 0px
