--- a/vue/src/styles/_filters.sass
+++ b/vue/src/styles/_filters.sass
@@ -89,7 +89,8 @@ $transition-sidebar: .2s ease-in-out
       gap: 10px
 
       .slider_container
-        padding: 0 0 0 6px
+        padding: 6px 0 0 6px
+        .slider
         .legend 
           margin-top: 4px
           font-size: .8em
