--- a/vue/src/styles/styles.sass
+++ b/vue/src/styles/styles.sass
@@ -335,6 +335,35 @@ pre
     background: $bright-aqua
     border-radius: 20px
 
+.banner_green
+  // make a green banner - the corners should be rounded, background .1 opacity, text a dark shade, and border a slightly darker shade than bg. Corners rounded 10px
+  background: rgba(0,198,198,.1)
+  color: $dark  
+  border: 1px solid rgba(0,198,198,.2)
+  border-radius: 10px
+  padding: 10px
+  h1
+    color: $bright-aqua
+  button
+    color: $dark
+    background: $bright-aqua
+    border-radius: 20px
+
+.banner_warn
+  // make an amber banner - the corners should be rounded, background .1 opacity, text a dark shade, and border a slightly darker shade than bg. Corners rounded 10px
+  background: rgba(255,193,7,.1)
+  color: $dark
+  border: 1px solid rgba(255,193,7,.2)
+  border-radius: 10px
+  padding: 10px
+  h1
+    // dark amber
+    color: #FFA000
+  button
+    color: $white
+    background: #FFA000
+    border-radius: 20px
+
 .wrap
   flex-wrap: wrap 
 
