--- a/vue/src/styles/_forms.sass
+++ b/vue/src/styles/_forms.sass
@@ -79,7 +79,9 @@ label
     cursor: pointer
 
 .select
-  background: url("@/components/ui/images/caret-lg.svg") no-repeat 100% 50%
+  background-image: url("@/components/ui/images/caret-lg.svg")
+  background-repeat: no-repeat
+  background-position: 100% 50%
   &.sm
     font-size: 0.8em
     padding: 0 12px 0 0
