--- a/vue/src/styles/styles.sass
+++ b/vue/src/styles/styles.sass
@@ -229,7 +229,7 @@ section
 
 .white
   input, select, textarea
-    background: #f5f5f5
+    background-color: #f5f5f5
     border: 1px solid #eee        
 .pageheader__header
   display: flex
