--- a/vue/src/styles/_ui.sass
+++ b/vue/src/styles/_ui.sass
@@ -34,6 +34,21 @@ button
   &:disabled
     opacity: .3
 
+.button__cancel
+  width: 100%
+  display: flex
+  padding: 16px
+  justify-content: center
+  // disable text selection
+  user-select: none
+  -webkit-user-select: none
+
+.button__secondary
+  // background: #eee
+  background: none
+  color: #666
+  border: none
+
 .action-buttons
   display: flex
   gap: 20px
