--- a/vue/src/styles/_checkbox.sass
+++ b/vue/src/styles/_checkbox.sass
@@ -7,8 +7,8 @@
   gap: 10px
 
 .checkbox-label
-  display: flex
-  align-items: center
+  display: flex !important
+  align-items: center !important
   position: relative
   padding-left: 35px
   margin-bottom: 0
@@ -21,7 +21,7 @@
   font: inherit
   color: inherit
   width: auto
-  height: 20px
+  height: auto !important
   &.nolabel
     width: 20px
     height: 20px
