--- a/vue/src/styles/_forms.sass
+++ b/vue/src/styles/_forms.sass
@@ -13,6 +13,17 @@
     display: flex
     align-items: center
   &.sm
+
+    width: 360px
+    max-width: 100%
+    .input, .select, .textarea
+      max-width: 260px
+      &.error
+        border: 1px solid rgba(255, 0, 0, .3)
+        background: rgba(255, 0, 0, .05)
+  &.med
+    min-width: 360px
+    max-width: 100%
     .input, .select, .textarea
       max-width: 260px
       &.error
