feat: add users page

--- a/vue/src/styles/_transitions.sass
+++ b/vue/src/styles/_transitions.sass
@@ -1,5 +1,5 @@
 // Fade objects in and out of view
-// to use: <Transition name="fade">... 
+// to use: <Transition name="fade">...
 
 .fade-enter-active,
 .fade-leave-active
@@ -22,8 +22,8 @@
   height: 118px
   // opacity: 0
 
-// Actions panel (Save / Cancel buttons, etc)
-  
+// Actions panel (Save / Cancel button, etc)
+
 .actions-enter-active,
 .actions-leave-active
   transition: all 0.5s ease
