--- a/vue/src/styles/_variables.sass
+++ b/vue/src/styles/_variables.sass
@@ -11,7 +11,7 @@ $body-font-weight: 400
 $primary: $cyan-400-color
 $red: rgb(253, 67, 67)
 $link: #0088ff
-$dark: #2c3e50  
+$dark: #2c3e50
 $darker: #151e27
 $icon-dark: #637b92
 $icon-light: #c6d2de
@@ -34,11 +34,11 @@ $green: #00C6C6
 // UI ITEMS
 
 $panel-dark: $blue-grey-700-color
-$ui-active: $teal-a700-color // color for active state of checkboxes, radio buttons, etc
+$ui-active: $teal-a700-color // color for active state of checkboxes, radio button, etc
 $ui-active-bright: $teal-a200-color // variant for borders, etc
 $ui-indicator: $white-color // color of symbol on active background (checkmark, dot, etc)
 $ui-border: $lightest
-// $ui-active: $teal-a400-color // color for active state of checkboxes, radio buttons, etc
+// $ui-active: $teal-a400-color // color for active state of checkboxes, radio button, etc
 // $ui-active-dark: $teal-a700-color
 
 // INPUTS
