--- a/vue/src/styles/styles.sass
+++ b/vue/src/styles/styles.sass
@@ -24,14 +24,17 @@ body
   margin: 0
   // font-family: Nunito, sans-serif
   font-family: $body-font
-  color: #333
+  color: $dark
   font-size: $body-font-size
   font-weight: $body-font-weight
   line-height: 20px
   background-color: #fff
 
+h1
+  color: $dark  
 h1, h2, h3, h4, h5, h6
-  font-weight: 400
+  font-weight: 700
+
 
 .main
   display: flex
