--- a/vue/src/styles/_forms.sass
+++ b/vue/src/styles/_forms.sass
@@ -48,7 +48,8 @@
   font-size: .7rem
   color: $lightest
 label
-  font-size: .9em
+  font-size: 1.1em
+  font-weight: 700
   margin-bottom: 3px
   color: $label-color
 .select,
@@ -109,7 +110,7 @@ label
     
 // vueform multiselect
 :root
-  --ms-tag-bg: #2c3e50
+  --ms-tag-bg: $tag-bg
   --ms-font-size: $body-font-size
   --ms-font-weight: inherit
   --ms-option-font-size: $body-font-size
